--- a/package.json
+++ b/package.json
@@ -27,12 +27,24 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -48,6 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "6.4.0-beta.23",
+    "@storybook/addon-essentials": "6.4.0-beta.23",
+    "@storybook/addon-links": "6.4.0-beta.23",
+    "@storybook/node-logger": "6.4.0-beta.23",
+    "@storybook/preset-create-react-app": "^3.1.6",
+    "@storybook/react": "6.4.0-beta.23",
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
