--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_DOMAIN=
 REACT_APP_API_KEY=
-REACT_APP_API_NAME=
+REACT_APP_ENDPOINT="/api/"
+REACT_APP_NAME="Ghost Admin"
