--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
    ],
   "overrides": [
     {
-      "files": "**/*.js",
+      "files": "**/*.(js|ts|tsx)",
       "rules": {
         "import/no-anonymous-default-export": "off",
         "import/no-named-as-default": "off",
@@ -32,10 +32,6 @@
     }
   ],
   "settings": {
-    "import/resolver": {
-      "alias": [
-        ["@", "./src"]
-      ]
-    }
+    "import/resolver": "webpack"
   }
 }
