--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "dev": "npm run storybook",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -77,6 +78,7 @@
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
