--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "6.4.0-beta.23",
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.15",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-webpack": "^0.13.2",
