--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "graphql": "^16.0.1",
     "hygen": "^6.1.0",
     "microcms-js-sdk": "^2.0.0",
     "react": "^17.0.2",
@@ -38,7 +39,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "new:fc": "hygen new fc"
+    "new:fc": "hygen new fc",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +71,11 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.2.2",
+    "@graphql-codegen/import-types-preset": "^2.1.7",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript-operations": "2.2.0",
     "@storybook/addon-actions": "6.4.0-beta.23",
     "@storybook/addon-essentials": "6.4.0-beta.23",
     "@storybook/addon-links": "6.4.0-beta.23",
